wp-content/plugins/candela-utility/themes/bombadil/style.css
/* ... */
.chapter-content .content-image img {
  margin-top: 30px;
}
.chapter-content .content-image p {
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 0.1em;
  color: #D43900;
  font-size: 0.9em;
  text-align: center;
}
.chapter-content .content-description {
  position: relative;
  left: 210px;
}
.chapter-content .content-description-title {
  margin: 0;
  padding: 30px 0 10px 0;
  text-decoration: none;
  line-height: 1em;
}
.chapter-content .content-description-long p {
  font-size: 0.9em;
}
td a {
  font-weight: 400;
}
.license-attribution {
  display: none;
}


/* ------------------------------------------------------------------------ *
 * ToC, AUTHOR PAGE, BOOK PAGE
 * ------------------------------------------------------------------------ */

#inline-toc h4 {
	font-family: inherit;
	font-size: 1em;
	font-weight: bold;
	text-align: left;
	text-transform: none;
}
.page-title {
	font-weight: normal;
}


/* ------------------------------------------------------------------------ *
 * STRUCTURE
 * ------------------------------------------------------------------------ */

#content table.bcc-shrink tr th,
#content table.bcc-shrink tr td,
#content table.bcc-shrink thead th {
	padding-right: 4px;
	padding-left: 4px;
}
#sidebar {
	display: none;
}


/* ------------------------------------------------------------------------ *
 * NAVIGATION & HEADER
 * ------------------------------------------------------------------------ */

.nav-container {
	margin-bottom: 0;
}
nav {
	background: #077fab;
	position: relative;
  height: 105px;
	width: 100%;
	z-index: 100;
	box-shadow: none;
	-o-box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
}
.header-nav {
	max-width: 940px;
	margin: 0 auto;
}
.pressbooks-logo {
	font-family: "proxima-nova", sans-serif;
	font-weight: 600;
	font-size: 1.6em;
	text-transform: none;
  color: #fff;
	padding: 0 0 0 34px;
	height: 70px;
	line-height: 70px;
	white-space: nowrap;
}
.book-title {
  font-size: 1.4em;
  font-weight: 400;
  color: #fff;
	text-align: left;
  text-decoration: none;
  text-transform: none;
	padding: 0 0 0 35px;
  /*margin: 50% auto;*/
  /*  DO NOT MOVE LAST 3 LINES - CENTERS BOOKTITLE TEXT  */
  height: 70px;
  line-height: 70px;
  white-space: nowrap;
}
.book-title:hover {
	color: #fff;
}
.sub-nav {
  margin: 0;
  max-height: 35px;
  background-color: #fafafa;
	padding: 4px;
	border-bottom: 1px #000 solid;
}
.center-subtext-search {
	max-width: 940px;
	margin: 0 auto;
}
.sub-nav-subtext {
  width: 40%;
  font-size: 14px;
  color: #6d6d6d;
  float: left;
	padding-left: 30px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.searchform {
  width: 220px;
  float: right;
  position: relative;
}
.searchform #s {
  width: 150px;
  height: 24px;
  display: inline-block;
  vertical-align: bottom;
}
.searchform #searchsubmit {
  position: absolute;
  height: 24px;
  width: 50px;
  font-size: 0.7em;
  display: inline-block;
  vertical-align: bottom;
  background-color: #077fab;
  color: #fff;
  border: none;
  border-radius: 0 2px 2px 0;
  margin: 0 0 0 -5px;
}
.searchform #searchsubmit:hover {
  background-color: #0897cb;
}


/* ------------------------------------------------------------------------ *
 * TITLE, SUBTITLE, AUTHORS & APHORISM
 * ------------------------------------------------------------------------ */

/*.entry-title {
	font-weight: normal;
	text-align: left;
	margin: 100px 0 80px;
	text-transform: none;
}*/
/*.entry-title span {
	border-bottom: 1px solid #333;
	padding: 0 0.2em 0.3em;
	text-align: center;
	width: 20%;
}*/
.chapter_subtitle {
	font-size: 1em;
	font-style: italic;
	font-weight: normal;
	margin: -80px 0 100px;
	line-height: 1.4em;
}
.chapter_author {
	font-family: "Crimson","Times New Roman", serif;
	font-style: italic;
	font-weight: normal;
	margin: -70px 0 100px;

}
.chapter_subtitle + .chapter_author {
	margin-top: -80px;
}
.aphorism {
	margin-bottom: 80px;
	margin-left: 100px;
	margin-top: -80px;
	padding: 0;
	text-align: right;
}
.aphorism cite {
	float: none;
}


/* ------------------------------------------------------------------------ *
 * FOOTNOTES & ENDNOTES
 * ------------------------------------------------------------------------ */

.endnotes h3 {
	text-align: left;
	text-indent: 0;
	text-transform: none;
}


/* ------------------------------------------------------------------------ *
 * FOOTER
 * ------------------------------------------------------------------------ */

p.cc-block {
	background-color: #f9f9f9 !important;
	border: 1px solid #dddddd !important;
	font-size: small;
	line-height: 17px;
	width: 100% !important;
	margin: 30px auto 8px !important;
	border-radius: 4px;
}
.screen-reader-text {
	display:none;
}
.footer {
  min-height: 1em;
  text-align: center;
  background: #fff;
  padding: 1em;
  color: #959595;
  font-family: "proxima-nova", sans-serif;
  font-size: 0.9em;
}
.footer a {
	color: #077fab !important;
}
.license-attribution img {
  margin-bottom: 0.5em;
  margin-top: 1em;
}
.footer table td {
	padding: 0.5em !important;
}
.end-page-heading-section {
  margin-top: -18px;
  border-bottom: solid 1px #e1e1e1;
  display: block;
}
.end-page-heading-section .type-icon {
  width: 31px;
  padding: 0;
}
.lumen-footer-logo {
  width: 120px;
  background: transparent;
  margin-bottom: -.3em;
  padding: 0;
	border: none;
}


/* ------------------------------------------------------------------------ *
 * TEXTBOOK SPECIFIC STYLES
 * ------------------------------------------------------------------------ */

.difficulty {
	float: right;
  text-transform: uppercase;
	font-weight: 600;
	letter-spacing: 0.1em;
	color: #D43900;
	font-size: 0.9em;
	position: absolute;
  right: 2.75em;
  top: 2.1em;
}
.bcc-box {
	padding: 2% 3%;
	margin-bottom: 15px;
	border-radius: 4px;
}
.bcc-box h3:first-child {
	text-align: center;
	margin: -2% -3% 15px;
	color: #ffffff;
	padding: 15px 0 15px;
}
.bcc-highlight {
	background-color: #f7f7f9;
}
/* ... */

